--- a/gemspec.yml
+++ b/gemspec.yml
@@ -10,6 +10,8 @@ email: postmodern.mod3@gmail.com
 homepage: http://github.com/postmodern/parameters
 has_yard: true
 
+required_ruby_version: >= 1.8.7
+
 development_dependencies:
   ore-tasks: ~> 0.4
   rspec: ~> 2.4
