--- a/gemspec.yml
+++ b/gemspec.yml
@@ -10,7 +10,7 @@ email: postmodern.mod3@gmail.com
 homepage: http://github.com/postmodern/parameters
 has_yard: true
 
-required_ruby_version: >= 1.8.7
+required_ruby_version: ">= 1.8.7"
 
 development_dependencies:
   ore-tasks: ~> 0.4
